# despina

./: .gitignore  .readthedocs.yml  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/despina/: Cargo.toml  README.md  justfile
crates/despina-cli/: Cargo.toml  README.md  justfile
crates/despina-cli/src/: cli.rs  commands.rs  import.rs  main.rs  output.rs  parse.rs  wide.rs
crates/despina-cli/src/commands/: from_csv.rs  from_parquet.rs  info.rs  stats.rs  to_csv.rs  to_parquet.rs  validate.rs
crates/despina-cli/tests/: cli.rs
crates/despina-duckdb/: Cargo.toml  README.md  justfile
crates/despina-duckdb/src/: lib.rs  vtab.rs
crates/despina-duckdb/tests/: read_mat.rs
crates/despina-py/: .gitignore  Cargo.toml  README.md  justfile
crates/despina-py/docs/source/: conf.py  error_handling.rst  index.rst  inspection.rst  numpy_workflows.rst  quickstart.rst  tabular_workflows.rst  type_codes.rst
crates/despina-py/docs/source/api/: index.rst  io.rst  matrix.rst  schema.rst
crates/despina-py/python/despina/: __init__.py  _core.py  _despina.pyi  capabilities.py  io.py  matrix.py  schema.py  tabular.py  warnings.py
crates/despina-py/src/: lib.rs
crates/despina-py/tests/: bench_performance.py  conftest.py  test_errors.py  test_golden.py  test_matrix.py  test_round_trip.py  test_schema.py  test_tabular.py
crates/despina-wasm/: Cargo.toml  README.md  justfile
crates/despina-wasm/js/: errors.d.ts  errors.js  index.d.ts  index.js  matrix.d.ts  matrix.js
crates/despina-wasm/src/: lib.rs
crates/despina/benches/: performance.rs
crates/despina/src/: decode.rs  encode.rs  error.rs  header.rs  lib.rs  matrix.rs  plane.rs  reader.rs  row.rs  row_format.rs  table_defs.rs  types.rs  writer.rs
crates/despina/tests/: integration.rs
crates/despina/tests/integration/: golden_fixture_contract.rs  header_contract.rs  rejection_contract.rs  roundtrip_contract.rs  support.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: clean_docs.rs  duckdb_install.rs  main.rs  wasm_build.rs
fixtures/bench/: compact_uniform_32_tables_32_zones.mat  medium_mixed_modes_32_tables_2048_zones.mat
fixtures/golden/conforming/: basic_zones_2.mat  dec_d_value_suite.mat  dec_s_value_suite.mat  dec_vector_full_0_to_9_s_d.mat  file_even_tables_subset.mat  rle_split_at_128.mat  tables_8_value_families_zones_40.mat
fixtures/golden/nonconforming/: invalid_divide_by_zero_computed.mat  invalid_elementwise_divide_by_zero_denominator.mat
